# EasyPaint

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci_windows.yaml
scripts/: cartoonify.py  depth2img.py  depth2img2.py  generate.py  generate_exp.py  img2img.py  inpaint.py  requirements.txt  style_transfer.py
sources/: ScriptInfo.h  ScriptModel.cpp  ScriptModel.h  additionaltools.cpp  additionaltools.h  autorun_utils.cpp  datasingleton.cpp  datasingleton.h  depth2img.py  generate.py  imagearea.cpp  imagearea.h  inpaint.py  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  script.py  undocommand.cpp  undocommand.h
sources/avir/: avir.h
sources/dialogs/: SpinnerOverlay.h  effectsettingsdialog.cpp  effectsettingsdialog.h  resizedialog.cpp  resizedialog.h  scripteffectsettingsdialog.cpp  settingsdialog.cpp  settingsdialog.h
sources/effects/: abstracteffect.cpp  abstracteffect.h  binarizationeffect.cpp  binarizationeffect.h  customeffect.cpp  customeffect.h  effectruncallback.h  effectwithsettings.cpp  effectwithsettings.h  gammaeffect.cpp  gammaeffect.h  gaussianblureffect.h  grayeffect.cpp  grayeffect.h  negativeeffect.cpp  negativeeffect.h  scripteffect.cpp  scripteffect.h  scripteffectwithsettings.cpp  scripteffectwithsettings.h  sharpeneffect.h
sources/instruments/: abstractinstrument.cpp  abstractinstrument.h  abstractselection.cpp  abstractselection.h  colorpickerinstrument.cpp  curvelineinstrument.cpp  ellipseinstrument.cpp  eraserinstrument.cpp  fillinstrument.cpp  lineinstrument.cpp  magnifierinstrument.cpp  pencilinstrument.cpp  rectangleinstrument.cpp  selectioninstrument.cpp  selectioninstrument.h  sprayinstrument.cpp  textinstrument.cpp
sources/qtsingleapplication/: qtlocalpeer.cpp
sources/translations/: easypaint_ru_RU.ts
sources/widgets/: abstracteffectsettings.h  customfiltersettings.cpp  customfiltersettings.h  gaussianblurfiltersettings.cpp  gaussianblurfiltersettings.h  scripteffectsettings.cpp  scripteffectsettings.h  sharpenfiltersettings.cpp  sharpenfiltersettings.h  shortcutedit.cpp  toolbar.cpp
